--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@react-navigation/stack": "^7.4.2",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-blob-util": "^0.22.2",
     "react-native-gesture-handler": "^2.27.1",
+    "react-native-pdf": "^6.7.7",
     "react-native-reanimated": "^3.18.0",
     "react-native-safe-area-context": "^5.5.1",
     "react-native-screens": "^4.11.1",
     "react-native-splash-screen": "^3.3.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
